alterações de adaptação